--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/checkbox": "^2.0.25",
+    "@nextui-org/slider": "^2.2.5",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
+    "@typeform/embed-react": "^3.11.0",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "next-video": "^0.11.2",
@@ -19,6 +24,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/react": "18.2.48",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
