--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typeform/embed-react": "^3.11.0",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
+    "next-intl": "^3.5.4",
     "next-video": "^0.11.2",
     "react": "^18",
     "react-dom": "^18",
