--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.0",
     "@nextui-org/checkbox": "^2.0.25",
     "@nextui-org/slider": "^2.2.5",
     "@nextui-org/system": "^2.0.15",
